<resources>
    <string name="app_name">Instagram</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="instagram">Instagram</string>
    <string name="your_story">Your Story</string>
    <string name="joshua_l">joshua_l</string>
    <string name="tokyo_japan">Tokyo, Japan</string>
    <string name="liked_by_craig_love_and_44_686_others">Liked by craig_love and 44,686 others</string>
    <string name="text_post2">joshua_l The game in Japan was amazing and I want to share some photos</string>
    <string name="jacob_w">jacob_w</string>
    <string name="_54">54</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="_834">834</string>
    <string name="_162">162</string>
    <string name="jacob_west">Jacob West</string>
    <string name="digital_goodies_designer_pixsellz">Digital goodies designer @pixsellz</string>
    <string name="everything_is_designed">Everything is designed.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="search_fragment">Search Fragment</string>
    <string name="add_fragment">Add Fragment</string>
    <string name="favourite_fragment">Favourite Fragment</string>
</resources>